--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 body {
     color: #cfe9fc;
     font-family: 'Maven Pro', sans-serif;
+    
     min-height:100%;
     background:url(../skytop.gif) rgba(69, 69, 109, 0.7) no-repeat center fixed;
     background-blend-mode: multiply;
@@ -17,13 +18,14 @@ body {
 }
 
 
+
 .content {
-    width: 60%;
+    width: 40%;
     height: auto;
     margin: 0 auto;
     margin-top:150px;
-    background-color: rgba(15, 18, 35, 0.9);
-    border-radius: 12px;
+    background-color: rgba(55, 79, 101, 0.3);
+    border-radius: 16px;
     padding-bottom: 40px;
 
 }
@@ -33,6 +35,7 @@ a {
     color: #cfe9fc;
     padding:10px 0px 10px 0px;
     text-decoration: none;
+
 
 }
 
@@ -44,17 +47,19 @@ a:hover {
 
 #heading {
 	padding: 10px 0px 0px 0px;
-    font-family: 'Permanent Marker', cursive;
+	font-family: 'Playball', cursive;
+    font-family: 'Covered By Your Grace', cursive;
 	font-size:3em;
     margin-bottom: 0px;
-    color: rgba(255,255,255,0.7);
 }
 
 
 #clock {
     font-family: 'Press Start 2P', cursive;
+
     font-size:1.8rem;
-    color: rgba(255,255,255,0.3);
+    color:rgba(200, 200, 200, 0.3);
+    color: rgba(136,84,81, 0.5);
 }
 
 
@@ -63,8 +68,10 @@ h1 {
 }
 
 h2 {
-    padding: 0px 33px;
-    font-family: 'Permanent Marker', cursive;
+    padding: 0px 4px;
+    margin-bottom: 3px;
+    color: rgba(214, 220, 225, 0.9);
+    font-family: 'Covered By Your Grace', cursive;
 
 }
 
@@ -72,6 +79,8 @@ h2 {
 ul {
     list-style-type: none;
     padding: 0px 33px;
+    
+
 
 }
 
@@ -101,7 +110,6 @@ input:focus, textarea:focus, select:focus {
 outline-offset: 0px !important;
 outline: none !important;
 }
-
 
 
 .column-left{ float: left; width: 33%; }
