--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Maven Pro', sans-serif;
     
     min-height:100%;
-    background:url(../skytop.gif) rgba(69, 69, 109, 0.7) no-repeat center fixed;
+    background:url(../images/skytop.gif) rgba(69, 69, 109, 0.7) no-repeat center fixed;
     background-blend-mode: multiply;
 
     background-size: cover;
