--- a/css/style.css
+++ b/css/style.css
@@ -1,106 +1,102 @@
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
-
-
 body {
     color: #cfe9fc;
-    font-family: 'Maven Pro', sans-serif;
-    min-height:100%;
-    background:url(../images/skytop.gif) rgba(69, 69, 109, 0.7) no-repeat center fixed;
+    font-family: "Maven Pro", sans-serif;
+    min-height: 100%;
+    background: url(../images/skytop.gif) rgba(69, 69, 109, 0.7) no-repeat center fixed;
     background-blend-mode: multiply;
     background-size: cover;
     -moz-background-size: cover;
     -webkit-background-size: cover;
 }
-
 .content {
     width: 40%;
     height: auto;
     margin: 0 auto;
-    margin-top:150px;
+    margin-top: 150px;
     background-color: rgba(55, 79, 101, 0.3);
     border-radius: 16px;
     padding-bottom: 40px;
 }
-
-
-
 a {
     color: #cfe9fc;
-    padding:10px 0px 10px 0px;
+    padding: 10px 0 10px 0;
     text-decoration: none;
 }
-
 a:hover {
-	color: pink;
-	padding:10px 0px 10px 0px;
+    color: pink;
+    padding: 10px 0 10px 0;
 }
-
 #heading {
-	padding: 10px 0px 0px 0px;
-	font-family: 'Playball', cursive;
-    font-family: 'Covered By Your Grace', cursive;
-	font-size:3em;
-    margin-bottom: 0px;
+    padding: 10px 0 0 0;
+    font-family: Playball, cursive;
+    font-family: "Covered By Your Grace", cursive;
+    font-size: 3em;
+    margin-bottom: 0;
 }
-
 #clock {
-    font-family: 'Press Start 2P', cursive;
-
-    font-size:1.8rem;
-    color: rgba(136,84,81, 0.75);
+    font-family: "Press Start 2P", cursive;
+    font-size: 1.8rem;
+    color: rgba(136, 84, 81, 0.75);
 }
-
 h1 {
-	text-align: center;
+    text-align: center;
 }
-
 h2 {
-    padding: 0px 4px;
+    padding: 0 4px;
     margin-bottom: 3px;
     color: rgba(214, 220, 225, 0.9);
-    font-family: 'Covered By Your Grace', cursive;
-
+    font-family: "Covered By Your Grace", cursive;
 }
-
 ul {
     list-style-type: none;
-    padding: 0px 33px;
+    padding: 0 33px;
 }
-
 .search {
     text-align: center;
     padding: 10px;
 }
-
 .search input {
-    width:70%;
-    background-color: black;
+    width: 70%;
+    background-color: #000;
     color: pink;
-    border: 1px solid #4E526C;
-
+    border: 1px solid #4e526c;
 }
-
-.search input:hover{
-    width:70%;
-    background-color: black;
+.search input:hover {
+    width: 70%;
+    background-color: #000;
     color: pink;
-    border: 1px solid #6E7495;
+    border: 1px solid #6e7495;
 }
-
-
-input:focus, textarea:focus, select:focus {
-outline-offset: 0px !important;
-outline: none !important;
+input:focus {
+    outline-offset: 0 !important;
+    outline: 0 !important;
 }
-
-.column-left{ float: left; width: 33%; }
-.column-right{ float: right; width: 33%; }
-.column-center{ display: inline-block; width: 33%; }
-
+.column-left {
+    float: left;
+    width: 33%;
+}
+.column-right {
+    float: right;
+    width: 33%;
+}
+.column-center {
+    display: inline-block;
+    width: 33%;
+}
 @media screen and (max-width: 960px) {
-    .column-left{ float: none; width: 100%; }
-    .column-right{ float: none; width: 100%; }
-    .column-center{ display: block; width: 100%; }
+    .column-left {
+        float: none;
+        width: 100%;
+    }
+    .column-right {
+        float: none;
+        width: 100%;
+    }
+    .column-center {
+        display: block;
+        width: 100%;
+    }
 }
