--- a/css/showcase.css
+++ b/css/showcase.css
@@ -1,159 +1,3 @@
-:root {
-  --col-primary: #ffaa0c;
-  --col-secondary : #051324;
-  --progress-bar-background-color:#557ba9;
-}
-
-.is-pri {
-  color: var(--col-primary);
-  background-color:var(--col-secondary) ;
-}
-
-.is-sec {
-  color: var(--col-secondary);
-  background-color:var(--col-primary) ;
-}
-
-
-.linearGradient {
-     height: 200px;
-     background-image: linear-gradient(
-        to top,
-        rgb(5,19,36),
-        rgba(5,19,36, 0.888),
-        rgba(5,19,36, 0.666),
-        rgba(5,19,36, 0)
-     );
-     transform: translateY(calc(-50px - 50%))
-  }
-
-
-html,
-body {
-  /* background: var(--col-secondary); */
-  /* font-family:Ubuntu, Tahoma, Geneva, Verdana, sans-serif; */
-}
-
-.navbar, navbar .navbar-menu,
-.navbar-menu.is-active {
-  background: var(--col-secondary);
-}
-
-.navbar a {
-  color:#ffffff
-}
-
-
-.navbar-link.is-active, 
-.navbar-link:focus, 
-.navbar-link:focus-within, 
-.navbar-link:hover, 
-a.navbar-item.is-active, 
-a.navbar-item:focus, 
-a.navbar-item:focus-within, 
-a.navbar-item:hover {
-  color:#ffffff;
-  background:#0000007c;
-}
-
-.tabs a {
-  color: rgb(255, 255, 255);
-}
-
-.tabs li.is-active a {
-  color: #ebe9ff;
-  border-bottom-color: #eea700;
-}
-
-
-a {
-  color: #ffc219;
-}
-
-.breadcrumb a {
-  color: #ffc219;
-}
-
-
-a:hover,
-.breadcrumb a:hover {
-  color: #ffcea6;
-  text-decoration: underline;
-}
-
-.hero-body {
-  color: #cfe9fc;
-  min-height: 100%;
-
-  /* background: url(../img/21.gif) rgba(69, 69, 109, 0.999);
-  background: var(--col-secondary);
-  background-blend-mode: multiply;
-  /* background-blend-mode: normal; */
-  background-size: cover;
-  -moz-background-size: cover;
-  -webkit-background-size: cover;
-
-}
-
-.hero-body .container {
-  max-width: 700px;
-}
-
-.hero-body .title {
-  color: hsl(192, 17%, 99%) !important;
-}
-.hero-body .subtitle {
-  color: hsl(192, 17%, 99%) !important;
-  padding-top: 2rem;
-  line-height: 1.5;
-}
-
-
-
-.table td, .table th, .table thead th {
-  background:var(--col-secondary);
-  color:var(--col-primary);
-  border: 1px solid orange;
-  border-top-width: 1px;
-  border-right-width: 1px;
-  border-bottom-width: 1px;
-  border-left-width: 1px;
-  border-width: 0 0 1px;
-  padding: .5em .75em;
-  vertical-align: top;}
-
-
-.btn-pri {
-  background-color: var(--col-primary)!important;
-  color: var(--col-secondary)!important;
-  border-color: var(--col-primary);
-}
-
-
-.btn-sec {
-  background-color: var(--col-secondary);
-  color: var(--col-primary);
-  border-color: var(--col-secondary);
-}
-
-.is-seco {
-  background-color: var(--col-secondary);
-  border-color: var(--col-primary);
-}
-
-
-
-
-
-
-
-/* sc */
-
-
-
-
-
-
 @import url("https://fonts.googleapis.com/css?family=Lato|Poppins|Kaushan+Script");
 .has-vertically-aligned-content {
   display: flex;
@@ -172,23 +16,16 @@ html {
 }
 
 .header-wrapper {
-  padding-bottom: 0px;
-
+  padding-bottom: 30px;
 }
-.main-content {
-  padding-top: 0px !important;
-}
-
-
 
 .hero {
-  /* background-image: url('https://picsum.photos/200/300'); */
-  background: linear-gradient(rgba(69, 69, 108, 0.65), rgba(44, 48, 108, 0.65)), rgba(0, 0, 0, 0.55) url("https://picsum.photos/1600/900") no-repeat;
-  background: linear-gradient(rgba(42, 42, 66, 0.65), rgba(30, 33, 74, 0.65)), rgba(0, 0, 0, 0.55) url(../img/banner.jpg) no-repeat;
+  background-image: url(https://picsum.photos/id/381/1920/1080);
+  background: linear-gradient(rgba(31, 44, 108, 0.65), rgba(31, 44, 108, 0.65)), rgba(0, 0, 0, 0.55) url("https://picsum.photos/id/381/1920/1080") no-repeat;
   background-attachment: fixed;
   background-size: cover;
   color: white;
-  box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(84, 91, 155, 0.23);
+  box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   font-family: 'Poppins', sans-serif;
 }
 
@@ -503,13 +340,3 @@ body.preloader-site {
 
 .white
 {color:ghostwhite}
-
-
-.progress {
-  background-color: ghostwhite;
-  color:#051324
-}
-
-.hero-body h1, h2, h3, h4, h5, h6{
-  font-weight: 700!important;
-}
