--- a/css/style.css
+++ b/css/style.css
@@ -1,515 +1,109 @@
 :root {
-  --col-primary: #ffaa0c;
-  --col-secondary : #051324;
-  --progress-bar-background-color:#557ba9;
-}
+  /* Globals */
+  --line-height: calc(1em * 1.7); /* Set this way so it can be used in calculations */
+  --element-padding: 8px;
+  --element-border: 1px;
+  --element-height: calc(var(--line-height) + var(--element-padding)*2 + var(--element-border)*2);
+  --border-radius: 4px;
+  --main-color: #33C3F0;
+  --main-color-contrast: #FFF;
+  --activated-color: #1EAEDB;
+  --activated-color-contrast: #FFF;
+  /* Basics */
+  --container-max-width: 800px;
 
-.is-pri {
-  color: var(--col-primary);
-  background-color:var(--col-secondary) ;
-}
+  --link-color: #1EAEDB;
+  --link-color-hover: #0FA0CE;
 
-.is-sec {
-  color: var(--col-secondary);
-  background-color:var(--col-primary) ;
-}
-
-
-.linearGradient {
-     height: 200px;
-     background-image: linear-gradient(
-        to top,
-        rgb(5,19,36),
-        rgba(5,19,36, 0.888),
-        rgba(5,19,36, 0.666),
-        rgba(5,19,36, 0)
-     );
-     transform: translateY(calc(-50px - 50%))
-  }
-
-
-html,
-body {
-  /* background: var(--col-secondary); */
-  /* font-family:Ubuntu, Tahoma, Geneva, Verdana, sans-serif; */
-}
-
-.navbar, navbar .navbar-menu,
-.navbar-menu.is-active {
-  background: var(--col-secondary);
-}
-
-.navbar a {
-  color:#ffffff
-}
-
-
-.navbar-link.is-active, 
-.navbar-link:focus, 
-.navbar-link:focus-within, 
-.navbar-link:hover, 
-a.navbar-item.is-active, 
-a.navbar-item:focus, 
-a.navbar-item:focus-within, 
-a.navbar-item:hover {
-  color:#ffffff;
-  background:#0000007c;
-}
-
-.tabs a {
-  color: rgb(255, 255, 255);
-}
-
-.tabs li.is-active a {
-  color: #ebe9ff;
-  border-bottom-color: #eea700;
-}
-
-
-a {
-  color: #ffc219;
-}
-
-.breadcrumb a {
-  color: #ffc219;
-}
-
-
-a:hover,
-.breadcrumb a:hover {
-  color: #ffcea6;
-  text-decoration: underline;
-}
-
-.hero-body {
-  color: #cfe9fc;
-  min-height: 100%;
-
-  /* background: url(../img/21.gif) rgba(69, 69, 109, 0.999);
-  background: var(--col-secondary);
-  background-blend-mode: multiply;
-  /* background-blend-mode: normal; */
-  background-size: cover;
-  -moz-background-size: cover;
-  -webkit-background-size: cover;
-
-}
-
-.hero-body .container {
-  max-width: 700px;
-}
-
-.hero-body .title {
-  color: hsl(192, 17%, 99%) !important;
-}
-.hero-body .subtitle {
-  color: hsl(192, 17%, 99%) !important;
-  padding-top: 2rem;
-  line-height: 1.5;
+  --font-size: 1.8rem;
+  --font-weight: 400;
+  --hero-padding: 2vh; 
+  
+  --background-color: rgb(14, 10, 16);
+  --text-color: rgb(243, 243, 243);
 }
 
 
 
-.table td, .table th, .table thead th {
-  background:var(--col-secondary);
-  color:var(--col-primary);
-  border: 1px solid orange;
-  border-top-width: 1px;
-  border-right-width: 1px;
-  border-bottom-width: 1px;
-  border-left-width: 1px;
-  border-width: 0 0 1px;
-  padding: .5em .75em;
-  vertical-align: top;}
-
-
-.btn-pri {
-  background-color: var(--col-primary)!important;
-  color: var(--col-secondary)!important;
-  border-color: var(--col-primary);
+@font-face {
+  font-family: "Yantramanav";
+  src: url("../fonts/Yantramanav-Black.ttf") format("truetype");
 }
 
-
-.btn-sec {
-  background-color: var(--col-secondary);
-  color: var(--col-primary);
-  border-color: var(--col-secondary);
+@font-face {
+  font-family: "Dense";
+  src: url("../fonts/Dense-Regular.otf") format("truetype");
 }
 
-.is-seco {
-  background-color: var(--col-secondary);
-  border-color: var(--col-primary);
+h1,h2,h3,h4,h5,h6 {
+  font-family: "Yantramanav", sans-serif;
 }
 
-
-
-
-
-
-
-/* sc */
-
-
-
-
-
-
-@import url("https://fonts.googleapis.com/css?family=Lato|Poppins|Kaushan+Script");
-.has-vertically-aligned-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+body, html {
+  background-color:var(--background-color);
+  color:var(--text-color);
+  font-family: "Yantramanav", sans-serif;
 }
 
-* {
-  box-sizing: border-box;
-}
+body,html {
 
-html {
-  font-family: 'Poppins', Lato, Tahoma, sans-serif;
-  width: 100%;
-  min-height: 100%;
-}
+  /* background: linear-gradient(rgba(69, 69, 108, 0.65), rgba(44, 48, 108, 0.65)), rgba(0, 0, 0, 0.55) url("https://picsum.photos/1600/900") no-repeat; */
+  background: linear-gradient(
+      rgba(42, 42, 79, 0.363),
+      rgba(31, 15, 48, 0.65)),
+      rgba(0, 0, 0, 0.55) url(../img/banner.webp) no-repeat;
 
-.header-wrapper {
-  padding-bottom: 0px;
-
-}
-.main-content {
-  padding-top: 0px !important;
-}
-
-
-
-.hero {
-  /* background-image: url('https://picsum.photos/200/300'); */
-  background: linear-gradient(rgba(69, 69, 108, 0.65), rgba(44, 48, 108, 0.65)), rgba(0, 0, 0, 0.55) url("https://picsum.photos/1600/900") no-repeat;
-  background: linear-gradient(rgba(42, 42, 66, 0.65), rgba(30, 33, 74, 0.65)), rgba(0, 0, 0, 0.55) url(../img/banner.jpg) no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  color: white;
-  box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(84, 91, 155, 0.23);
-  font-family: 'Poppins', sans-serif;
 }
 
-.hero .title {
-  font-family: 'Kaushan Script', sans-serif;
-  transform: rotate(-5deg);
-  font-size: 5rem;
-  color: whitesmoke;
+
+.intro {
+  margin-top:20px;
+
 }
 
-.hero .subtitle {
-  padding: 5px;
-  color: whitesmoke;
-}
+/* BASE */
 
-.hero .profession {
-  padding-top: 50px;
-  font-size: 1.7rem;
-  text-transform: uppercase;
+.title {
+  font-weight: 400;
 }
-
-.hero .hero-foot {
-  height: 50px;
-  background: white;
-  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.082);
-}
-
-@media (max-width: 599px) {
-  .hero .hero-foot {
-    display: none;
-  }
-}
-
-.hero .hero-foot .hero-foot--wrapper {
-  margin: 7px auto;
-  height: 50px;
-}
-
-.hero .hero-foot .hero-foot--wrapper .hero-menu-desktop {
-  line-height: 38px;
-  font-weight: 600;
-  text-transform: lowercase;
-  letter-spacing: 1px;
-  font-size: 1rem;
-}
-
-.hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li {
-  display: inline-block;
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-.hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li.is-active a {
-  border-bottom: 2px solid #1f2c6c;
-}
-
-.hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li a {
-  color: #1f2c6c;
-}
-
-.hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li a:hover {
-  color: #1f2c6c;
-  transition: all .2s ease-in-out;
-  border-bottom: 2px solid #1f2c6c;
-}
-
-.main-content {
-  padding-top: 2rem;
-  color: #3c4172;
-  font-family: 'Poppins', sans-serif;
-}
-
-.main-content .section-dark {
-  background-color: #f0f3f5;
-  padding: 60px 0px;
-}
-
-.main-content .section-dark.resume {
-  height: 400px;
-  padding-top: 100px;
-}
-
-@media (max-width: 599px) {
-  .main-content .section-dark.resume {
-    padding-top: 75px;
-  }
-}
-
-.main-content .section-dark.resume .title {
-  padding: 20px;
-}
-
-.main-content .section-dark.resume button {
-  border: 2px solid #43485c;
-  background: white;
-  color: #43485c;
-  height: 50px;
-  width: 250px;
-  font-size: 1rem;
-  text-transform: uppercase;
-}
-
-.main-content .section-dark.resume .fa-download {
-  color: #1f2c6c;
-}
-
-.main-content .section-dark.my-work {
-  padding: 120px;
-}
-
-@media (max-width: 599px) {
-  .main-content .section-dark.my-work {
-    padding: 75px 20px;
-  }
-}
-
-.main-content .section-dark.my-work .work-item {
-  margin-bottom: 1rem;
-  -webkit-transition: all .1s ease-in-out;
-  transition: all .1s ease-in-out;
-  border-radius: 5px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  box-shadow: 0 5px 20px rgba(14, 25, 80, 0.3);
-}
-
-.main-content .section-dark.my-work .work-item:hover {
-  -webkit-transform: scale(1.055) translateY(-2px);
-  transform: scale(1.055) translateY(-2px);
-  -webkit-box-shadow: 0 2px 25px 0 rgba(30, 30, 30, 0.1);
-  box-shadow: 0 2px 25px 0 rgba(30, 30, 30, 0.1);
-}
-
-.main-content .section-light {
-  padding: 30px;
-}
-
-.main-content .section-light.about-me {
-  padding-bottom: 100px;
-}
-
-.main-content .section-light.about-me .is-larger {
-  font-size: 1.2rem;
-}
-
-@media (max-width: 599px) {
-  .main-content .section-light.about-me .about-links {
-    text-align: center;
-  }
-}
-
-.main-content .section-light.about-me .right-image img {
-  border-radius: 11px;
-  margin: 20px;
-  box-shadow: 0 5px 20px rgba(14, 25, 80, 0.3);
-}
-
-@media (max-width: 599px) {
-  .main-content .section-light.about-me .right-image img {
-    margin: auto;
-  }
-}
-
-.main-content .section-light.skills {
-  padding: 100px;
-}
-
-@media (max-width: 599px) {
-  .main-content .section-light.skills {
-    padding: 50px 20px 40px 20px;
-    padding-bottom: 20px;
-  }
-}
-
-.main-content .section-light.skills h1 {
-  padding: 10px;
-}
-
-.main-content .section-light.contact {
-  padding: 200px;
-}
-
-.main-content .section-light.contact button {
-  width: 100%;
-  background-color: #43485c;
-  color: white;
-  height: 50px;
-  font-size: 1.1rem;
-  text-transform: uppercase;
-  font-family: 'Poppins', sans-serif;
-}
-
-@media (max-width: 599px) {
-  .main-content .section-light.contact {
-    padding: 60px 20px;
-  }
-}
-
-.main-content .section-color.services {
-  padding: 100px;
-  background-color: #43485c;
-  color: white;
-}
-
-.main-content .section-color.services .title,
-.main-content .section-color.services .subtitle {
-  color: white;
-}
-
-.main-content .section-color.services i {
-  font-size: 3rem;
-  padding: 20px;
-}
-
-.main-content .section-title {
-  color: #43485c;
-  text-transform: uppercase;
-  font-size: 1.8rem;
-  letter-spacing: 2px;
-  padding-bottom: 30px;
-}
-
-.footer {
-  bottom: 0;
-  width: 100vw;
-  padding: 0;
-  height: 80px;
-  line-height: 25px;
+.example-grid .column > div,
+.example-grid .columns > div {
+  background-color: #eee;
+  border-radius: 4px;
   text-align: center;
-  background: #1f2c6c;
-  color: whitesmoke;
-  padding-top: 2rem;
+  font-size: 1rem;
+  text-transform: uppercase;
+  margin-bottom: 0.75rem;
+}
+@media (min-width: 550px) {
+  .example-grid .column > div,
+  .example-grid .columns > div {
+    margin-bottom: 1.5rem;
+  }
+}
+.heading-font-size {
+  font-size: 1.2rem;
+  color: #999;
+  font-weight: 400;
+  text-transform: none;
 }
 
-.footer a {
-  padding: 0rem 1rem 1rem 1rem;
-  color: lightgrey;
+
+
+.bordered {
+  border: 1px solid #999;
+  border-radius: 4px;
+  margin-bottom: 0.5rem;
+  padding: 0.5rem;
 }
 
-.footer a i {
-  font-size: 1.5rem;
-  padding: 0px 10px;
-}
 
-.footer a .nav-item {
-  color: whitesmoke;
-}
-
-.fa-download {
-  color: #43485c;
-}
-
-#toTop {
-  height: 50px;
-  width: 50px;
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  border: none;
-  outline: none;
-  background-color: rgba(31, 44, 108, 0.65);
-  color: white;
-  cursor: pointer;
-  border-radius: 50%;
-  font-size: 2rem;
-  box-shadow: 0 5px 20px rgba(14, 25, 80, 0.3);
-}
-
-#toTop a {
-  color: white;
-}
-
-#toTop:hover {
-  background-color: #43485c;
-}
-
-::-webkit-scrollbar {
-  width: 8px;
-  background-color: rgba(245, 245, 245, 0);
-}
-
-::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #43485c;
-}
-
-body.preloader-site {
-  overflow: hidden;
-}
-
-.preloader-wrapper {
-  height: 100%;
-  width: 100%;
-  background: #1f2c6c;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999999;
-}
-
-.preloader-wrapper .preloader {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  width: 120px;
-}
-
-.white
-{color:ghostwhite}
-
-
-.progress {
-  background-color: ghostwhite;
-  color:#051324
-}
-
-.hero-body h1, h2, h3, h4, h5, h6{
-  font-weight: 700!important;
+.navbar#navigation {
+  position: sticky;
+  top: -1px;
+  z-index: 1;
+  display: flex;
+  flex-wrap: wrap;
 }
